--- a/style.css
+++ b/style.css
@@ -5,10 +5,16 @@
     text-shadow: 2px 2px 5px rgb(170, 206, 180);
 }
 
+.slider {
+    padding-top: 100px;
+}
+
 .value {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: teal;
     font-weight: bold;
+    padding-top: 20px;
+    padding-left: 50px;
 }
 
 .bar {
@@ -20,12 +26,6 @@
     background-color: grey;
     opacity: 0.5;
     border-radius: 50px;
-    transition: opacity 1s;
-    transition: left 3s;
-}
-
-.bar:hover {
-    opacity: 1;
 }
 
 .cursor {
